1. add DirectoryChooser,FilesChooser; 2. remove javaFX dependency.